refactored contact us template to match the base template

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,111 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>CarHire || Contact Us</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="header-footer.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Carter+One&family=Nunito+Sans:wght@400;700&display=swap"
-    rel="stylesheet">
-  </head>
-  <body>
+{% extends "base.html" %}
 
-     
-  <!-- header section starts here -->
-  <header>
-
-    <nav class="navbar">
-        <span class="hamburger-btn"><i class="fa fa-bars"></i></span>
-        <a href="#" class="logo">
-            <img src="imgs/Hire icon.png" alt="logo">
-            <h2>CarHire</h2>
-        </a>
-        <ul class="links">
-            <span class="close-btn"><i class="fa fa-times"></i></span>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About us</a></li>
-            <li><a href="contact.html">Contact us</a></li>
-        </ul>
-
-        <button class="login-btn">Login/Signup</button>
-    </nav>
-</header>
-
-
-<div class="bg-overlay"></div>
-<div class="form-popup">
-    <span class="close-btn"><i class="fa fa-times"></i></span>
-
-
-    <div class="form-box login">
-       
-        <div class="form-content">
-            <h2>LOGIN</h2>
-            <form action="#">
-                <div class="input-field">
-                    <input type="text" required>
-                    <label>Email</label>
-                </div>
-                <div class="input-field">
-                    <input type="password" required>
-                    <label>Password</label>
-                </div>
-                <a href="#" class="forgot-pass-link">Forgot password?</a>
-                <button type="submit">Log In</button>
-            </form>
-            <div class="bottom-link">
-                Don't have an account?
-                <a href="#" id="signup-link">Signup</a>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="form-box signup">
-     
-                  <form id="form" action="#">
-                <h1>REGISTER</h1>
-                <div class="input-control">
-                    <label for="username">Username</label>
-                    <input id="username" name="username" type="text">
-                    <div class="error"></div>
-                </div>
-                <div class="input-control">
-                    <label for="email">Email</label>
-                    <input id="email" name="email" type="text">
-                    <div class="error"></div>
-                </div>
-                <div class="input-control">
-                    <label for="password">Password</label>
-                    <input id="password"name="password" type="password">
-                    <div class="error"></div>
-                </div>
-                <div class="input-control">
-                    <label for="password2">Confirm Password</label>
-                    <input id="password2"name="password2" type="password">
-                    <div class="error"></div>
-                </div>
-                <button type="submit">Sign Up</button>
-
-                <div class="bottom-link">
-                  Already have an account? 
-                  <a href="#" id="login-link">Login</a>
-              </div>
-            </form>
-
-          
-      </div>
-    </div>
-    </div>
-</form>
-<!-- header section ends here -->
+{% block title %} Contact Us {% endblock %}
    
-
-
-    <!-- contact section starts here -->
+{% block content %}
+  <!-- contact section starts here -->
     <section class = "contact-section">
       <div class = "contact-bg">
         <h2>contact us</h2>
@@ -158,51 +56,12 @@
       </div>
       <!-- contact section ends here -->
 
-
       
-<!-- footer section starts here -->
-<footer>
-  <div class="content">
-    <div class="left box">
-      <div class="upper">
-        <div class="topic">About us</div>
-        <p>We deal with car hire services. Get the chance to choose your perfect ride 
-          from our wide variety of car brands and models</p>
-      </div>
-      <div class="lower">
-        <div class="topic">Contact us</div>
-        <div class="phone">
-          <a href="#"><i class="fas fa-phone-volume"></i>+254 1234 5678</a>
-        </div>
-        <div class="email">
-          <a href="#"><i class="fas fa-envelope"></i>info@carhire.com</a>
-        </div>
-      </div>
-    </div>
-    <div class="middle box">
-      <div class="topic">Quick Links</div>
-      <div><a href="index.html">Home</a></div>
-      <div><a href="about.html">About Us</a></div>
-      <div><a href="contact.html">Contact Us</a></div>
-    </div>
-    <div class="right box">
-      <div class="topic">Subscribe To Our Newsletter</div>
-      <form action="#">
-        <input type="text" placeholder="Enter email address">
-        <input type="submit" name="" value="Send">
-        
-      </form>
-    </div>
-  </div>
-  <div class="bottom">
-    <p>Copyright © 2024 <a href="#">Car Hire</a> All rights reserved</p>
-  </div>
-</footer>
-<!-- footer section ends here -->
+{% endblock %}
 
 
-
-
+{% block inlinestyles %}
+      
       <style>
 
         *{
@@ -351,10 +210,4 @@
         
         </style>
 
-
-
-
-
-<script src="navbar.js"></script>
-  </body>
-</html>
+{% endblock %}
