--- a/templates/base.html
+++ b/templates/base.html
@@ -66,8 +66,13 @@
                 <form id="form" action="/register" method="post">
                 <h1>REGISTER</h1>
                 <div class="input-control">
-                    <label for="username">Username</label>
-                    <input id="username" name="username" type="text">
+                    <label for="username">First Name</label>
+                    <input id="firstname" name="firstname" type="text">
+                    <div class="error"></div>
+                </div>
+                <div class="input-control">
+                    <label for="lastname">Last Name</label>
+                    <input id="lastname" name="lastname" type="text">
                     <div class="error"></div>
                 </div>
                 <div class="input-control">
